--- a/Assets/CSS/trialFigmaStyle.css
+++ b/Assets/CSS/trialFigmaStyle.css
@@ -70,6 +70,15 @@ input[type="password"] {
   border-radius: 10px;
   border: 1px solid #D9D9D9;
 }
+
+input[type="text"]::placeholder,
+input[type="email"]::placeholder,
+input[type="password"]::placeholder {
+  color: var(--muted, #D9D9D9);
+  font-size: 10px;
+  font-weight: 500;
+}
+
 .checkBox {
   color: black;
   font-size: 9px;
@@ -94,6 +103,7 @@ input[type="password"] {
   font-size: 13px;
   font-weight: 700;
   margin-bottom: 59.09px;
+  cursor: pointer;
 }
 
 .or > * {
@@ -158,6 +168,7 @@ input[type="password"] {
   font-size: 12px;
   font-weight: 500;
   white-space: nowrap;
+  cursor: pointer;
 }
 
 .google span,
